Implement table and API
