# airflow/api_connexion/schemas/clear_event_schema.py
@@ -1,0 +1,36 @@
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+from __future__ import annotations
+
+from marshmallow_sqlalchemy import SQLAlchemySchema, auto_field
+
+from airflow.models.dataset import ClearEvent
+
+
+class ClearEventSchema(SQLAlchemySchema):
+    """DagScheduleDatasetReference DB schema."""
+
+    class Meta:
+        """Meta."""
+
+        model = ClearEvent
+
+    # dag_id = auto_field()
+    cutoff_time = auto_field()
+
+
+clear_event_schema = ClearEventSchema()
